# eip3156workspace

./: .gitignore  LICENSE  README.md  event.json  scenario  scenario_minter  scinario
eip3156-1/: Cargo.toml  EIP-3156.md  Makefile  note  todo
eip3156-1/erc20/src/: balances.rs  constants.rs  entry_points.rs  flashmint.rs  lib.rs
eip3156-1/erc20/src/flashmint/: error_flashmint.rs
eip3156-1/example/borrower/: Cargo.toml
eip3156-1/example/br-contract/: Cargo.toml
eip3156-1/example/br-contract/src/: main.rs
eip3156-1/example/ld-contract/: Cargo.toml
eip3156-1/example/ld-contract/src/: main.rs
eip3156-1/example/lender/: Cargo.toml
eip3156-1/example/lender/src/: main.rs
eip3156-1/example/minter/: Cargo.toml
eip3156-1/example/minter/src/: main.rs
eip3156-1/flashborrower/: Cargo.toml
eip3156-1/flashborrower/src/: constants.rs  detail.rs  entry_points.rs  error.rs  flashborrow.rs  lib.rs
eip3156-1/flashlender/: Cargo.toml
eip3156-1/flashlender/src/: constants.rs  entry_points.rs  error.rs  flashlend.rs  lib.rs  tokens.rs
eip3156-1/flashminter/: Cargo.toml
eip3156-1/flashminter/src/: error.rs  lib.rs
eip3156-1/tests/eip3156-test-call/: Cargo.toml
eip3156-1/tests/eip3156-test-call/src/: main.rs
eip3156-1/tests/minter-test-call/: Cargo.toml
eip3156-1/tests/minter-test-call/src/: main.rs
eip3156-1/tests/testborrower/: Cargo.toml
eip3156-1/tests/testborrower/src/: integration_tests.rs
eip3156-1/tests/testborrower/wasm/: borrower.wasm  lender.wasm
eip3156-1/tests/testing/: Cargo.toml
eip3156-1/tests/testing/src/: integration_tests_borrower_lender.rs  integration_tests_borrower_minter.rs
eip3156-1/tests/testing/wasm/: borrower.wasm  eip3156_test_call.wasm  lender.wasm
eip3156clientjs/: README.md  constants.js  package.json
eip3156clientjs/src/: borrow_contract_install.js  lend_contract_install.js
eip3156clientrust/: Cargo.toml  Makefile  note
eip3156clientrust/borrower/: Cargo.toml
eip3156clientrust/borrower/src/: main.rs
eip3156clientrust/erc20/: Cargo.toml
eip3156clientrust/erc20/src/: getbalance.rs  maxflashloan.rs
eip3156clientrust/lender/: Cargo.toml
eip3156clientrust/lender/src/: flashfee.rs  maxflashloan.rs
eip3156rustclient/: Cargo.toml  Makefile  note  scinario
eip3156rustclient/borrower/: Cargo.toml
eip3156rustclient/erc20/: Cargo.toml
eip3156rustclient/erc20/src/: getbalance.rs
eip3156rustclient/lender/: Cargo.toml
eip3156rustclient/lender/src/: flash_fee.rs
