[package]
name = "flashborrower"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.3.2"
casper-erc20 = { path = "../erc20" }
casper-types = "1.3.2"
once_cell = { version = "1.8.0", default-features = false }
# eip3156lender = {path = "../eip3156lender"}