[package]
name = "erc20"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4"
casper-types = "1.4"
hex = { version = "0.4.3", default-features = false }

[[bin]]
name = "getbalance"
path = "src/getbalance.rs"

