[package]
name = "testborrower"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-engine-test-support = {version = "2.0.3", features = ["test-support"]}
casper-execution-engine = "1.4.3"
casper-types = "1.4.5"
base64 = "0.13.0"

[[bin]]
name = "integration-tests"
path = "src/integration_tests.rs"
bench = false
doctest = false
